panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_read_member.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_read_member.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_read_member.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (struct Inner~1
      (member x @0 `int`)
      (member y @4 `int`)
      (member z @8 `int`))
   (struct Middle~2
      (member y @0 `int`)
      (member inner @4 `struct Inner~1 complete`)
      (member inner2 @16 `struct Inner~1 complete`))
   (struct Outer~3
      (member x @0 `int`)
      (member middle @4 `struct Middle~2 complete`)
      (member inner @32 `struct Inner~1 complete`)
      (member y @44 `int`))
   (function-definition external stack-size=56
      (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner))
      (params
         (p~6 `ptr<struct Inner~1 complete>` @0))
      (compound-statement
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 37>>` @24
                        (string `array<char; 37>` @void "Inner { .x = %d, .y = %d, .z = %d }\n\0"))))
               (member `int` @32 x +0
                  (deref `struct Inner~1 complete` @void (p~6 `ptr<struct Inner~1 complete>` @0)))
               (member `int` @36 y +4
                  (deref `struct Inner~1 complete` @void (p~6 `ptr<struct Inner~1 complete>` @0)))
               (member `int` @40 z +8
                  (deref `struct Inner~1 complete` @void (p~6 `ptr<struct Inner~1 complete>` @0)))))))
   (function-definition external stack-size=168
      (main~7 `fn() -> int` (static main))
      (compound-statement
         (struct Inner~1
            (member x @0 `int`)
            (member y @4 `int`)
            (member z @8 `int`))
         (definition (inner~9 `struct Inner~1 complete` @0)
            (braced
               (subobject +0 (1 `int` @0))
               (subobject +4 (2 `int` @4))
               (subobject +8 (3 `int` @8))))
         (definition (inner2~10 `struct Inner~1 complete` @12)
            (braced
               (subobject +0 (4 `int` @12))
               (subobject +4 (5 `int` @16))
               (subobject +8 (6 `int` @20))))
         (definition (inner3~11 `struct Inner~1 complete` @24)
            (braced
               (subobject +0
                  (add `int` @24
                     (member `int` @0 x +0
                        (inner~9 `struct Inner~1 complete` @0))
                     (10 `int` @36)))
               (subobject +4
                  (add `int` @28
                     (member `int` @16 y +4
                        (inner2~10 `struct Inner~1 complete` @12))
                     (20 `int` @36)))
               (subobject +8
                  (add `int` @32
                     (member `int` @20 z +8
                        (inner2~10 `struct Inner~1 complete` @12))
                     (30 `int` @36)))))
         (struct Middle~2
            (member y @0 `int`)
            (member inner @4 `struct Inner~1 complete`)
            (member inner2 @16 `struct Inner~1 complete`))
         (definition (middle~12 `struct Middle~2 complete` @36)
            (braced
               (subobject +0 (2742 `int` @36))
               (subobject +4 (inner~9 `struct Inner~1 complete` @0))
               (subobject +16 (inner2~10 `struct Inner~1 complete` @12))))
         (struct Outer~3
            (member x @0 `int`)
            (member middle @4 `struct Middle~2 complete`)
            (member inner @32 `struct Inner~1 complete`)
            (member y @44 `int`))
         (definition (outer~13 `struct Outer~3 complete` @64)
            (braced
               (subobject +0 (42 `int` @64))
               (subobject +4 (middle~12 `struct Middle~2 complete` @36))
               (subobject +32 (inner3~11 `struct Inner~1 complete` @24))
               (subobject +44 (27 `int` @108))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(p: ptr<struct Inner~1 complete>) -> void>` @112
                  (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner)))
               (addressof `ptr<struct Inner~1 complete>` @120
                  (inner~9 `struct Inner~1 complete` @0))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(p: ptr<struct Inner~1 complete>) -> void>` @112
                  (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner)))
               (addressof `ptr<struct Inner~1 complete>` @120
                  (member `struct Inner~1 complete` @84 inner2 +16
                     (member `struct Middle~2 complete` @68 middle +4
                        (outer~13 `struct Outer~3 complete` @64))))))
         (struct Inner~1
            (member x @0 `int`)
            (member y @4 `int`)
            (member z @8 `int`))
         (definition (inner_read_from_struct~14 `struct Inner~1 complete` @112)
            (member `struct Inner~1 complete` @84 inner2 +16
               (member `struct Middle~2 complete` @68 middle +4
                  (outer~13 `struct Outer~3 complete` @64))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(p: ptr<struct Inner~1 complete>) -> void>` @128
                  (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner)))
               (addressof `ptr<struct Inner~1 complete>` @136
                  (inner_read_from_struct~14 `struct Inner~1 complete` @112))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(p: ptr<struct Inner~1 complete>) -> void>` @128
                  (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner)))
               (addressof `ptr<struct Inner~1 complete>` @136
                  (member `struct Inner~1 complete` @96 inner +32
                     (outer~13 `struct Outer~3 complete` @64)))))
         (expression
            (call `int` @124
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @128
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @136
                  (noop-type-conversion `ptr<char>` @136
                     (addressof `ptr<array<char; 10>>` @136
                        (string `array<char; 10>` @void "%d %d %d\n\0"))))
               (member `int` @108 y +44
                  (outer~13 `struct Outer~3 complete` @64))
               (member `int` @68 y +0
                  (member `struct Middle~2 complete` @68 middle +4
                     (outer~13 `struct Outer~3 complete` @64)))
               (member `int` @92 z +8
                  (member `struct Inner~1 complete` @84 inner2 +16
                     (member `struct Middle~2 complete` @68 middle +4
                        (outer~13 `struct Outer~3 complete` @64))))))
         (expression
            (call `int` @124
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @128
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @136
                  (noop-type-conversion `ptr<char>` @136
                     (addressof `ptr<array<char; 5>>` @136
                        (string `array<char; 5>` @void "%td\n\0"))))
               (ptr-diff `long` @144
                  (noop-type-conversion `ptr<char>` @144
                     (addressof `ptr<int>` @144
                        (member `int` @88 y +4
                           (member `struct Inner~1 complete` @84 inner2 +16
                              (member `struct Middle~2 complete` @68 middle +4
                                 (outer~13 `struct Outer~3 complete` @64))))))
                  (noop-type-conversion `ptr<char>` @152
                     (addressof `ptr<struct Inner~1 complete>` @152
                        (member `struct Inner~1 complete` @72 inner +4
                           (member `struct Middle~2 complete` @68 middle +4
                              (outer~13 `struct Outer~3 complete` @64)))))))))))

----- stderr -----
