panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_read_member_static.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_read_member_static.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_read_member_static.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (struct Inner~1
      (member x @0 `int`)
      (member y @4 `int`)
      (member z @8 `int`))
   (struct Middle~2
      (member y @0 `int`)
      (member inner @4 `struct Inner~1 complete`)
      (member inner2 @16 `struct Inner~1 complete`))
   (struct Outer~3
      (member x @0 `int`)
      (member middle @4 `struct Middle~2 complete`)
      (member inner @32 `struct Inner~1 complete`)
      (member y @44 `int`))
   (function-definition external stack-size=56
      (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner))
      (params
         (p~6 `ptr<struct Inner~1 complete>` @0))
      (compound-statement
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 37>>` @24
                        (string `array<char; 37>` @void "Inner { .x = %d, .y = %d, .z = %d }\n\0"))))
               (member `int` @32 x +0
                  (deref `struct Inner~1 complete` @void (p~6 `ptr<struct Inner~1 complete>` @0)))
               (member `int` @36 y +4
                  (deref `struct Inner~1 complete` @void (p~6 `ptr<struct Inner~1 complete>` @0)))
               (member `int` @40 z +8
                  (deref `struct Inner~1 complete` @void (p~6 `ptr<struct Inner~1 complete>` @0)))))))
   (definition external (inner~7 `struct Inner~1 complete` (static inner))
      (braced
         (subobject +0 (1 `int`))
         (subobject +4 (2 `int`))
         (subobject +8 (3 `int`))))
   (definition external (outer~8 `struct Outer~3 complete` (static outer))
      (braced
         (subobject +0 (42 `int`))
         (subobject +4 (2742 `int`))
         (subobject +8 (1 `int`))
         (subobject +12 (2 `int`))
         (subobject +16 (3 `int`))
         (subobject +20 (4 `int`))
         (subobject +24 (5 `int`))
         (subobject +28 (6 `int`))
         (subobject +32 (11 `int`))
         (subobject +36 (25 `int`))
         (subobject +40 (36 `int`))
         (subobject +44 (27 `int`))))
   (function-definition external stack-size=56
      (main~9 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `void` @void
               (addressof `ptr<fn(p: ptr<struct Inner~1 complete>) -> void>` @0
                  (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner)))
               (addressof `ptr<struct Inner~1 complete>` @8
                  (inner~7 `struct Inner~1 complete` (static inner)))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(p: ptr<struct Inner~1 complete>) -> void>` @0
                  (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner)))
               (addressof `ptr<struct Inner~1 complete>` @8
                  (member `struct Inner~1 complete` @8 inner2 +16
                     (member `struct Middle~2 complete` @void middle +4
                        (outer~8 `struct Outer~3 complete` (static outer)))))))
         (definition (inner_read_from_struct~11 `struct Inner~1 complete` @0)
            (member `struct Inner~1 complete` @0 inner2 +16
               (member `struct Middle~2 complete` @void middle +4
                  (outer~8 `struct Outer~3 complete` (static outer)))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(p: ptr<struct Inner~1 complete>) -> void>` @16
                  (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner)))
               (addressof `ptr<struct Inner~1 complete>` @24
                  (inner_read_from_struct~11 `struct Inner~1 complete` @0))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(p: ptr<struct Inner~1 complete>) -> void>` @16
                  (print_inner~4 `fn(p: ptr<struct Inner~1 complete>) -> void` (static print_inner)))
               (addressof `ptr<struct Inner~1 complete>` @24
                  (member `struct Inner~1 complete` @24 inner +32
                     (outer~8 `struct Outer~3 complete` (static outer))))))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 10>>` @24
                        (string `array<char; 10>` @void "%d %d %d\n\0"))))
               (member `int` @32 y +44
                  (outer~8 `struct Outer~3 complete` (static outer)))
               (member `int` @36 y +0
                  (member `struct Middle~2 complete` @void middle +4
                     (outer~8 `struct Outer~3 complete` (static outer))))
               (member `int` @40 z +8
                  (member `struct Inner~1 complete` @void inner2 +16
                     (member `struct Middle~2 complete` @void middle +4
                        (outer~8 `struct Outer~3 complete` (static outer)))))))
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 5>>` @24
                        (string `array<char; 5>` @void "%td\n\0"))))
               (ptr-diff `long` @32
                  (noop-type-conversion `ptr<char>` @32
                     (addressof `ptr<int>` @32
                        (member `int` @32 y +4
                           (member `struct Inner~1 complete` @void inner2 +16
                              (member `struct Middle~2 complete` @void middle +4
                                 (outer~8 `struct Outer~3 complete` (static outer)))))))
                  (noop-type-conversion `ptr<char>` @40
                     (addressof `ptr<struct Inner~1 complete>` @40
                        (member `struct Inner~1 complete` @40 inner +4
                           (member `struct Middle~2 complete` @void middle +4
                              (outer~8 `struct Outer~3 complete` (static outer))))))))))))

----- stderr -----
