panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_struct_completed_in_inner_scope.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_struct_completed_in_inner_scope.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_struct_completed_in_inner_scope.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (compound-statement
            (struct T~2
               (member x @0 `int`)))
         (definition (incomplete_here~3 `struct T~2 complete` @0)
            (braced
               (subobject +0 (42 `int` @0)))))))

----- stderr -----
