panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_struct_with_const_member.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_struct_with_const_member.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_struct_with_const_member.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (struct Struct~1
      (member x @0 `int`)
      (member y @4 `int const`)
      (member z @8 `int`))
   (function-definition external stack-size=24
      (make_struct~2 `fn() -> struct Struct~1 complete` (static make_struct))
      (compound-statement
         (struct Struct~1
            (member x @0 `int`)
            (member y @4 `int const`)
            (member z @8 `int`))
         (definition (value~4 `struct Struct~1 complete` @0)
            (braced
               (subobject +0 (1 `int` @0))
               (subobject +4 (2 `int` @4))
               (subobject +8 (3 `int` @8))))
         (return (value~4 `struct Struct~1 complete` @0))))
   (function-definition external stack-size=40
      (print_struct~5 `fn(value: struct Struct~1 complete) -> void` (static print_struct))
      (params
         (value~7 `struct Struct~1 complete` @0))
      (compound-statement
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 10>>` @24
                        (string `array<char; 10>` @void "%d %d %d\n\0"))))
               (member `int` @0 x +0
                  (value~7 `struct Struct~1 complete` @0))
               (member `int const` @4 y +4
                  (value~7 `struct Struct~1 complete` @0))
               (member `int` @8 z +8
                  (value~7 `struct Struct~1 complete` @0))))))
   (function-definition external stack-size=40
      (main~8 `fn() -> int` (static main))
      (compound-statement
         (struct Struct~1
            (member x @0 `int`)
            (member y @4 `int const`)
            (member z @8 `int`))
         (definition (value~10 `struct Struct~1 complete` @0)
            (call `struct Struct~1 complete` @0
               (addressof `ptr<fn() -> struct Struct~1 complete>` @16
                  (make_struct~2 `fn() -> struct Struct~1 complete` (static make_struct)))))
         (expression
            (assign `int` @0
               (member `int` @0 x +0
                  (value~10 `struct Struct~1 complete` @0))
               (42 `int` @0)))
         (expression
            (assign `int` @8
               (member `int` @8 z +8
                  (value~10 `struct Struct~1 complete` @0))
               (27 `int` @8)))
         (expression
            (call `void` @void
               (addressof `ptr<fn(value: struct Struct~1 complete) -> void>` @16
                  (print_struct~5 `fn(value: struct Struct~1 complete) -> void` (static print_struct)))
               (value~10 `struct Struct~1 complete` @0))))))

----- stderr -----
