panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__test_ternary.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/test_ternary.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/test_ternary.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (struct Struct~1
      (member x @0 `long`))
   (function-definition external stack-size=40
      (print_struct~2 `fn(value: struct Struct~1 complete) -> void` (static print_struct))
      (params
         (value~4 `struct Struct~1 complete` @0))
      (compound-statement
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 33>>` @24
                        (string `array<char; 33>` @void "struct Struct { long x = %ld; }\n\0"))))
               (member `long` @0 x +0
                  (value~4 `struct Struct~1 complete` @0))))))
   (function-definition external stack-size=56
      (main~5 `fn() -> int` (static main))
      (compound-statement
         (definition (value~7 `struct Struct~1 complete` @0)
            (braced
               (subobject +0 (sign-extend `long` @0 (42 `int` @8)))))
         (definition (other~8 `struct Struct~1 complete` @8)
            (braced
               (subobject +0 (sign-extend `long` @8 (27 `int` @16)))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(value: struct Struct~1 complete) -> void>` @16
                  (print_struct~2 `fn(value: struct Struct~1 complete) -> void` (static print_struct)))
               (conditional `struct Struct~1 complete` @24
                  (1 `bool` @32)
                  (other~8 `struct Struct~1 complete` @8)
                  (value~7 `struct Struct~1 complete` @0))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(value: struct Struct~1 complete) -> void>` @16
                  (print_struct~2 `fn(value: struct Struct~1 complete) -> void` (static print_struct)))
               (conditional `struct Struct~1 complete` @24
                  (0 `bool` @32)
                  (other~8 `struct Struct~1 complete` @8)
                  (value~7 `struct Struct~1 complete` @0)))))))

----- stderr -----
